# SekaiTranslate

./: .gitignore  LICENCE  README.md  deno.json  index.html  package-lock.json  package.json  server.ts  tailwind.config.js  vite.config.js
.github/workflows/: deploy.yml  release.yml
backend/: go.mod
backend/cmd/server/: auth.ts  backend.tsx  backend.tsx.bak  jsonChunker.ts  main.go
public/assets/: test1 copy.json  test1.json  专有名词表.json  乐曲一览.json  人称表.json  应援色.json
src/: App.css  App.jsx  index.css  main.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: desktop.json
src-tauri/src/: lib.rs  main.rs
src/assets/: FuzzySearchDict.json
src/components/: ConfirmDialog.jsx  CreateTableButton.jsx  CreateTableModal.jsx  EditRecordModal.jsx  FriendlyLinks.jsx  FunctionSidebar.jsx  GlobalSearch.jsx  JsonTable.jsx  LoadingIndicator.jsx  MobileSidebar.jsx  NameSearch.jsx  Sidebar.jsx  TopBar.jsx
src/components/modals/: AuthModal.jsx  ConfirmDialog.jsx  CreateTableModal.jsx  EditRecordModal.jsx  Settings.jsx
src/components/navigation/: FriendlyLinks.jsx  FunctionSidebar.jsx  MobileSidebar.jsx  TopBar.jsx
src/contexts/: NotificationContext.jsx  ThemeContext.jsx  UserContext.jsx
src/pages/: AuthModal.jsx  Settings.jsx
src/styles/: CreateTableModal.css  FriendlyLinks.css  FunctionPages.css  FunctionSidebar.css  GlobalSearch.css  JsonTable.css  LoadingIndicator.css  MobileSidebar.css  NameSearch.css  SideBar.css  TopBar.css  global.css
src/utils/: JsonCache.jsx
tools/: PersonalSheetParser.py  migrateJsonToKV.jsx  xls2json.py
(+5 files in other folders)
