[package]
name = "sekai_translate"
version = "0.1.0"
description = "A Translation tool of PRSK"
authors = ["Is14w <>"]
edition = "2024"

[lib]
name = "sekai_translate_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.6", features = [] }

[dependencies]
tauri = { version = "2.3.1", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2.2.0"
tauri-plugin-fs = "2.2.0"

serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
